Name:                attoparsec-conduit
Version:             0.5.0
Synopsis:            Consume attoparsec parsers via conduit.
Description:         Consume attoparsec parsers via conduit.
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Data, Conduit
Build-type:          Simple
Cabal-version:       >=1.8
Homepage:            http://github.com/snoyberg/conduit
extra-source-files:  test/main.hs

Library
  Exposed-modules:     Data.Conduit.Attoparsec
  Build-depends:       base                     >= 4            && < 5
                     , transformers             >= 0.2.2        && < 0.4
                     , bytestring               >= 0.9
                     , attoparsec               >= 0.10
                     , text                     >= 0.11
                     , conduit                  >= 0.5          && < 0.6
  ghc-options:     -Wall

test-suite test
    hs-source-dirs: test
    main-is: main.hs
    type: exitcode-stdio-1.0
    cpp-options:   -DTEST
    build-depends:   conduit
                   , base
                   , hspec == 1.3.*
                   , text
                   , resourcet
                   , attoparsec
                   , attoparsec-conduit
                   , conduit
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/conduit.git
