Name:                blaze-builder-conduit
Version:             0.2.0
Synopsis:            Convert streams of builders to streams of bytestrings.
Description:         Convert streams of builders to streams of bytestrings.
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Data, Conduit
Build-type:          Simple
Cabal-version:       >=1.8
Homepage:            http://github.com/snoyberg/conduit
extra-source-files:  test/main.hs

Library
  Exposed-modules:     Data.Conduit.Blaze
  Build-depends:       base                     >= 4            && < 5
                     , containers
                     , transformers             >= 0.2.2        && < 0.3
                     , bytestring               >= 0.9
                     , text                     >= 0.11
                     , blaze-builder            >= 0.2.1.4      && < 0.4
                     , conduit                  >= 0.2
  ghc-options:     -Wall

test-suite test
    hs-source-dirs: test
    main-is: main.hs
    type: exitcode-stdio-1.0
    cpp-options:   -DTEST
    build-depends:   conduit
                   , base
                   , hspec
                   , HUnit
                   , QuickCheck
                   , bytestring
                   , blaze-builder
                   , blaze-builder-conduit
                   , transformers
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/conduit.git
