name:            cereal-conduit
version:         0.7.3
license:         BSD3
license-file:    LICENSE
author:          Myles C. Maxfield <myles.maxfield@gmail.com>
maintainer:      Michael Snoyman
synopsis:        Turn Data.Serialize Gets and Puts into Sources, Sinks, and Conduits
description:
    Turn Data.Serialize Gets and Puts into Sources, Sinks, and Conduits.
category:        Conduit
stability:       Experimental
cabal-version:   >= 1.8
build-type:      Simple
homepage:        https://github.com/snoyberg/conduit
bug-reports:     https://github.com/snoyberg/conduit/issues
extra-source-files: README.md ChangeLog.md

library
    build-depends: base         >= 4       && < 5
                 , conduit      >= 1.0.0   && < 1.3
                 , resourcet    >= 0.4     && < 1.2
                 , cereal       >= 0.4.0.0 && < 0.6
                 , bytestring
                 , transformers >= 0.2.0.0
    exposed-modules: Data.Conduit.Cereal
                   , Data.Conduit.Cereal.Internal
    ghc-options:     -Wall

Test-Suite test-cereal-conduit
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: Test
    build-depends: base
                 , conduit
                 , cereal
                 , cereal-conduit
                 , bytestring
                 --, test-framework-hunit
                 , HUnit
                 , resourcet
                 , mtl
                 , transformers

source-repository head
  type:     git
  location: git://github.com/snoyberg/conduit.git
