Name:                conduit-extra
Version:             1.2.0
Synopsis:            Batteries included conduit: adapters for common libraries.
Description:
    The conduit package itself maintains relative small dependencies. The purpose of this package is to collect commonly used utility functions wrapping other library dependencies, without depending on heavier-weight dependencies. The basic idea is that this package should only depend on haskell-platform packages and conduit.
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Data, Conduit
Build-type:          Simple
Cabal-version:       >=1.8
Homepage:            http://github.com/snoyberg/conduit
extra-source-files:
    test/random
    test/filesystem/*.txt
    test/filesystem/bin/*.txt
    ChangeLog.md
    README.md

Library
  Exposed-modules:     Data.Conduit.Attoparsec
                       Data.Conduit.Binary
                       Data.Conduit.Blaze
                       Data.Conduit.ByteString.Builder
                       Data.Conduit.Filesystem
                       Data.Conduit.Foldl
                       Data.Conduit.Lazy
                       Data.Conduit.Network
                       Data.Conduit.Network.UDP
                       Data.Conduit.Process
                       Data.Conduit.Text
                       Data.Conduit.Zlib
  if !os(windows)
      Exposed-modules: Data.Conduit.Network.Unix

  if arch(x86_64) || arch(i386)
      -- These architectures are able to perform unaligned memory accesses
      cpp-options: -DALLOW_UNALIGNED_ACCESS

  Build-depends:       base                     >= 4.5          && < 5
                     , conduit                  >= 1.1          && < 1.3

                       -- No version bounds necessary, since they're inherited
                       -- from conduit.
                     , bytestring
                     , exceptions
                     , monad-control
                     , text
                     , transformers
                     , transformers-base

                     , async
                     , attoparsec               >= 0.10
                     , blaze-builder            >= 0.3
                     , directory
                     , filepath
                     , network                  >= 2.3
                     , primitive                >= 0.5
                     , process
                     , resourcet                >= 1.1
                     , stm
                     , streaming-commons        >= 0.1.16

  ghc-options:     -Wall

test-suite test
    hs-source-dirs: test
    main-is: Spec.hs
    type: exitcode-stdio-1.0
    ghc-options:   -threaded
    cpp-options:   -DTEST
    build-depends:   conduit
                   , conduit-extra
                   , base
                   , hspec >= 1.3

                   , async
                   , attoparsec
                   , blaze-builder
                   , bytestring-builder
                   , bytestring
                   , exceptions
                   , process
                   , resourcet
                   , QuickCheck
                   , stm
                   , streaming-commons
                   , text
                   , transformers
                   , transformers-base
                   , directory
    ghc-options:     -Wall
    if os(windows)
        cpp-options: -DWINDOWS
    other-modules:   Data.Conduit.AttoparsecSpec
                     Data.Conduit.BinarySpec
                     Data.Conduit.ByteString.BuilderSpec
                     Data.Conduit.ExtraSpec
                     Data.Conduit.FilesystemSpec
                     Data.Conduit.LazySpec
                     Data.Conduit.NetworkSpec
                     Data.Conduit.ProcessSpec
                     Data.Conduit.TextSpec
                     Data.Conduit.ZlibSpec

benchmark blaze
    type:           exitcode-stdio-1.0
    hs-source-dirs: bench
    build-depends:  base
                  , blaze-builder
                  , conduit
                  , conduit-extra
                  , criterion
                  , bytestring
                  , bytestring-builder
                  , transformers
    main-is:        blaze.hs
    ghc-options:    -Wall -O2 -rtsopts

source-repository head
  type:     git
  location: git://github.com/snoyberg/conduit.git
