Name:                conduit
Version:             1.2.8
Synopsis:            Streaming data processing library.
description:
    Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/conduit>.
    .
    @conduit@ is a solution to the streaming data problem, allowing for production, transformation, and consumption of streams of data in constant memory. It is an alternative to lazy I\/O which guarantees deterministic resource handling, and fits in the same general solution space as @enumerator@\/@iteratee@ and @pipes@. For a tutorial, please visit <https://www.fpcomplete.com/user/snoyberg/library-documentation/conduit-overview>.
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Data, Conduit
Build-type:          Simple
Cabal-version:       >=1.8
Homepage:            http://github.com/snoyberg/conduit
extra-source-files:  test/main.hs
                   , README.md
                   , ChangeLog.md
                   , fusion-macros.h

Library
  Exposed-modules:     Data.Conduit
                       Data.Conduit.List
                       Data.Conduit.Internal
                       Data.Conduit.Lift
                       Data.Conduit.Internal.Fusion
                       Data.Conduit.Internal.List.Stream
  other-modules:       Data.Conduit.Internal.Pipe
                       Data.Conduit.Internal.Conduit
  Build-depends:       base                     >= 4.5          && < 5
                     , resourcet                >= 1.1          && < 1.2
                     , exceptions               >= 0.6
                     , lifted-base              >= 0.1
                     , transformers-base        >= 0.4.1        && < 0.5
                     , transformers             >= 0.2.2
                     , mtl
                     , mmorph
                     , monad-control
  if !impl(ghc>=7.9)
    build-depends:   void                     >= 0.5.5
  ghc-options:         -Wall
  include-dirs:        .

test-suite test
    hs-source-dirs: test
    main-is: main.hs
    other-modules: Data.Conduit.Extra.ZipConduitSpec
                 , Data.Conduit.StreamSpec
    type: exitcode-stdio-1.0
    cpp-options:   -DTEST
    build-depends:   conduit
                   , base
                   , hspec >= 1.3
                   , QuickCheck >= 2.7
                   , transformers
                   , mtl
                   , resourcet
                   , containers
                   , exceptions >= 0.6
                   , safe
    if !impl(ghc>=7.9)
        build-depends: void
    ghc-options:     -Wall

--test-suite doctests
--    hs-source-dirs: test
--    main-is: doctests.hs
--    type: exitcode-stdio-1.0
--    ghc-options: -threaded
--    build-depends: base, directory, doctest >= 0.8

-- benchmark utf8-memory-usage
--     type: exitcode-stdio-1.0
--     hs-source-dirs: benchmarks
--     build-depends:  base
--                   , text-stream-decode
--                   , bytestring
--                   , text
--                   , conduit
--     main-is:        utf8-memory-usage.hs
--     ghc-options:    -Wall -O2 -with-rtsopts=-s

benchmark optimize-201408
    type: exitcode-stdio-1.0
    hs-source-dirs: benchmarks
    build-depends:  base
                  , conduit
                  , vector
                  , deepseq
                  , containers
                  , transformers
                  , hspec
                  , mwc-random
                  , criterion
                  , kan-extensions
    main-is:        optimize-201408.hs
    ghc-options:    -Wall -O2 -rtsopts

benchmark unfused
    type: exitcode-stdio-1.0
    hs-source-dirs: benchmarks
    build-depends:  base
                  , conduit
                  , criterion
                  , transformers
    main-is:        unfused.hs
    ghc-options:    -Wall -O2 -rtsopts

source-repository head
  type:     git
  location: git://github.com/snoyberg/conduit.git
