Name:                conduit
Version:             1.3.1.2
Synopsis:            Streaming data processing library.
description:
    `conduit` is a solution to the streaming data problem, allowing for production,
    transformation, and consumption of streams of data in constant memory. It is an
    alternative to lazy I\/O which guarantees deterministic resource handling.
    .
    For more information about conduit in general, and how this package in
    particular fits into the ecosystem, see [the conduit
    homepage](https://github.com/snoyberg/conduit#readme).
    .
    Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/conduit>.
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Data, Conduit
Build-type:          Simple
Cabal-version:       >=1.8
Homepage:            http://github.com/snoyberg/conduit
extra-source-files:  test/main.hs
                   , test/doctests.hs
                   , test/subdir/dummyfile.txt
                   , README.md
                   , ChangeLog.md
                   , fusion-macros.h

Library
  hs-source-dirs:      src
  Exposed-modules:     Data.Conduit
                       Data.Conduit.Combinators
                       Data.Conduit.List
                       Data.Conduit.Internal
                       Data.Conduit.Lift
                       Data.Conduit.Internal.Fusion
                       Data.Conduit.Internal.List.Stream
                       Data.Conduit.Combinators.Stream
                       Conduit
  other-modules:       Data.Conduit.Internal.Pipe
                       Data.Conduit.Internal.Conduit
                       Data.Conduit.Combinators.Unqualified
                       Data.Streaming.FileRead
                       Data.Streaming.Filesystem
  Build-depends:       base                     >= 4.9          && < 5
                     , resourcet                >= 1.2          && < 1.3
                     , transformers             >= 0.4
                     , mtl
                     , primitive
                     , unliftio-core
                     , exceptions
                     , mono-traversable         >= 1.0.7
                     , vector
                     , bytestring
                     , text
                     , filepath
                     , directory

  if os(windows)
    build-depends:     Win32
    other-modules:     System.Win32File
    cpp-options:       -DWINDOWS
  else
    build-depends:     unix

  ghc-options:         -Wall
  include-dirs:        .

test-suite conduit-test
    hs-source-dirs: test
    main-is: main.hs
    other-modules: Data.Conduit.Extra.ZipConduitSpec
                 , Data.Conduit.StreamSpec
                 , Spec
                 , StreamSpec
    type: exitcode-stdio-1.0
    cpp-options:   -DTEST
    build-depends:   conduit
                   , base
                   , hspec >= 1.3
                   , QuickCheck >= 2.7
                   , transformers
                   , mtl
                   , resourcet
                   , containers
                   , exceptions >= 0.6
                   , safe
                   , split >= 0.2.0.0
                   , mono-traversable
                   , text
                   , vector
                   , directory
                   , bytestring
                   , silently
                   , filepath
                   , unliftio >= 0.2.4.0
    ghc-options:     -Wall

  if os(windows)
    cpp-options:     -DWINDOWS

--test-suite doctests
--    hs-source-dirs: test
--    main-is: doctests.hs
--    type: exitcode-stdio-1.0
--    ghc-options: -threaded
--    build-depends: base, directory, doctest >= 0.8

-- benchmark utf8-memory-usage
--     type: exitcode-stdio-1.0
--     hs-source-dirs: benchmarks
--     build-depends:  base
--                   , text-stream-decode
--                   , bytestring
--                   , text
--                   , conduit
--     main-is:        utf8-memory-usage.hs
--     ghc-options:    -Wall -O2 -with-rtsopts=-s

benchmark optimize-201408
    type: exitcode-stdio-1.0
    hs-source-dirs: benchmarks
    build-depends:  base
                  , conduit
                  , vector
                  , deepseq
                  , containers
                  , transformers
                  , hspec
                  , mwc-random
                  , gauge
                  , kan-extensions
    main-is:        optimize-201408.hs
    ghc-options:    -Wall -O2 -rtsopts

benchmark unfused
    type: exitcode-stdio-1.0
    hs-source-dirs: benchmarks
    build-depends:  base
                  , conduit
                  , gauge
                  , transformers
    main-is:        unfused.hs
    ghc-options:    -Wall -O2 -rtsopts

source-repository head
  type:     git
  location: git://github.com/snoyberg/conduit.git
