Name:                http-conduit-parsers
Version:             0.5.0
Synopsis:            Functions for parsing various parts of the HTTP protocol.
Description:         The goal of this package is to provide a single place for implementing this code for usage in both web clients and server.
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Web, Conduit
Build-type:          Simple
Cabal-version:       >=1.8
Homepage:            http://github.com/snoyberg/conduit

Library
  Exposed-modules:     Data.Conduit.HTTP
  Build-depends:       base                     >= 4            && < 5
                     , conduit                  >= 0.5          && < 0.6
                     , bytestring               >= 0.9
                     , transformers
  ghc-options:     -Wall

test-suite test
    hs-source-dirs: test
    main-is: main.hs
    type: exitcode-stdio-1.0
    build-depends:   conduit
                   , http-conduit-parsers
                   , base
                   , hspec == 1.3.*
                   , HUnit
                   , bytestring
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/conduit.git
