name:                network-conduit-tls
version:             1.1.2
synopsis:            Create TLS-aware network code with conduits
description:         Uses the tls package for a pure-Haskell implementation.
homepage:            https://github.com/snoyberg/conduit
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Network
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  README.md ChangeLog.md

library
  exposed-modules:    Data.Conduit.Network.TLS
                      Data.Conduit.Network.TLS.Internal
  build-depends:      base            >= 4        && < 5
                    , system-filepath >= 0.4
                    , system-fileio   >= 0.3
                    , bytestring      >= 0.9
                    , tls             >= 1.2.15
                    , conduit-extra   >= 1.1
                    , conduit         >= 1.1
                    , network
                    , transformers
                    , cprng-aes
                    , connection
                    , monad-control
                    , data-default
                    , streaming-commons

test-suite test
    hs-source-dirs: test
    main-is: main.hs
    type: exitcode-stdio-1.0
    cpp-options:   -DTEST
    build-depends:   conduit
                   , conduit-extra
                   , connection
                   , base
                   , mtl
                   , network-conduit-tls
                   , bytestring
                   , HUnit
    ghc-options:     -Wall -threaded
