name:                network-conduit-tls
version:             1.3.2
synopsis:            Create TLS-aware network code with conduits
description:         Uses the tls package for a pure-Haskell implementation.
homepage:            https://github.com/snoyberg/conduit
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Network
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  README.md ChangeLog.md

library
  exposed-modules:    Data.Conduit.Network.TLS
                      Data.Conduit.Network.TLS.Internal
  build-depends:      base            >= 4.9      && < 5
                    , bytestring      >= 0.9
                    , tls             >= 1.3
                    , conduit-extra   >= 1.3
                    , conduit         >= 1.3
                    , network
                    , transformers
                    , connection
                    , streaming-commons >= 0.1.12
                    , unliftio-core
                    , data-default-class

test-suite test
    hs-source-dirs: test
    main-is: main.hs
    type: exitcode-stdio-1.0
    cpp-options:   -DTEST
    build-depends:   conduit
                   , conduit-extra
                   , connection
                   , base
                   , mtl
                   , network-conduit-tls
                   , bytestring
                   , HUnit
    ghc-options:     -Wall -threaded
