Name:                network-conduit
Version:             0.2.1
Synopsis:            Stream socket data using conduits.
Description:         Stream socket data using conduits.
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Data, Conduit, Network
Build-type:          Simple
Cabal-version:       >=1.8
Homepage:            http://github.com/snoyberg/conduit

flag network-bytestring
    default: False

Library
  Exposed-modules:     Data.Conduit.Network
  Build-depends:       base                     >= 4            && < 5
                     , transformers             >= 0.2.2        && < 0.3
                     , bytestring               >= 0.9
                     , conduit                  >= 0.2
  if flag(network-bytestring)
        build-depends: network               >= 2.2.1   && < 2.2.3
                     , network-bytestring    >= 0.1.3   && < 0.1.4
  else
        build-depends: network               >= 2.3     && < 2.4
  ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/conduit.git
