Name:                network-conduit
Version:             1.0.4
Synopsis:            Stream socket data using conduits.
Description:         Stream socket data using conduits.
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Data, Conduit, Network
Build-type:          Simple
Cabal-version:       >=1.8
Homepage:            http://github.com/snoyberg/conduit
extra-source-files:  test/main.hs

flag network-bytestring
    default: False
    description: Use the older network and network-bytestring split packages.

Library
  Exposed-modules:     Data.Conduit.Network
                     , Data.Conduit.Network.UDP
                     , Data.Conduit.Network.Internal
  other-modules:       Data.Conduit.Network.Utils
  Build-depends:       base                     >= 4            && < 5
                     , transformers             >= 0.2.2        && < 0.4
                     , bytestring               >= 0.9
                     , conduit                  >= 1.0          && < 1.1
                     , lifted-base              >= 0.1
                     , monad-control            >= 0.3          && < 0.4
  if flag(network-bytestring)
        build-depends: network               >= 2.2.1   && < 2.2.3
                     , network-bytestring    >= 0.1.3   && < 0.1.4
  else
        build-depends: network               >= 2.3
  if !os(windows)
      Exposed-modules: Data.Conduit.Network.Unix
                     , Data.Conduit.Network.Internal.Unix
      Build-depends:   directory                >= 1.1
  ghc-options:     -Wall

test-suite test
    hs-source-dirs: test
    main-is: main.hs
    type: exitcode-stdio-1.0
    cpp-options:   -DTEST
    build-depends:   conduit
                   , base
                   , network-conduit
    ghc-options:     -Wall -threaded

source-repository head
  type:     git
  location: git://github.com/snoyberg/conduit.git
