Name:                resourcet
Version:             1.1.8.1
Synopsis:            Deterministic allocation and freeing of scarce resources.
description:         Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/resourcet>.
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Category:            Data, Conduit
Build-type:          Simple
Cabal-version:       >=1.8
Homepage:            http://github.com/snoyberg/conduit
extra-source-files:  ChangeLog.md, README.md

Library
  Exposed-modules:     Control.Monad.Trans.Resource
                       Control.Monad.Trans.Resource.Internal
                       Data.Acquire
                       Data.Acquire.Internal
  Build-depends:       base                     >= 4.5          && < 5
                     , lifted-base              >= 0.1
                     , transformers-base        >= 0.4.4        && < 0.5
                     , monad-control            >= 0.3.1        && < 1.1
                     , containers
                     , transformers             >= 0.2.2
                     , transformers-compat      >= 0.3          && < 0.6
                     , mtl                      >= 2.0          && < 2.3
                     , mmorph
                     , exceptions               >= 0.5
  ghc-options:     -Wall

test-suite test
    hs-source-dirs: test
    main-is: main.hs
    type: exitcode-stdio-1.0
    cpp-options:   -DTEST
    build-depends:   resourcet
                   , base
                   , hspec >= 1.3
                   , lifted-base
                   , transformers
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/conduit.git
